# kewarmibot

./: .env.example  .gitignore  FIXES_APPLIED.md  README.md  gen_proxies.py  kewarmibot.service  main.py  mchrbl-bot.service  pyproject.toml  setup.sh
data/: migrations.txt
data/backups/: kewarmibot-20260608-030000.db  kewarmibot-20260609-030000.db
docs/: PHASE2-ARCHITECTURE.md  ROADMAP-Sprint-5-7.md  SPRINT3-ADMIN-EXTEND.md  SPRINT3-FIXES-AUDIT.md
migrations/: 002_add_hero_spacing.sql  004_phase2_users.sql  setup_pool.py
src/: config.py  cookie_service.py  crypto.py  db.py  package_service.py  payment_service.py  proxy_pool_service.py  scheduler_jobs.py  settings_service.py  user_service.py  war_config_service.py  webhook_server.py
src/bot/: handlers.py  notify.py
src/bot/handlers/: __init__.py  _common.py  admin.py  config.py  cookies.py  guide.py  info.py  menu.py  payment.py  pool.py  router.py  war.py
src/engine/: api.py  war.py  war_runner.py
tests/: conftest.py  test_cookie_service.py  test_crypto.py  test_menu_permissions.py  test_payment_config.py  test_payment_idempotency.py  test_pool_service.py  test_smoke.py  test_user_service.py  test_war_config.py
